<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="threepointsteammiami">+3 points</string>
    <string name="twopointsteammiami">+2 points</string>
    <string name="freethrowteammiami">free throw</string>
    <string name="threepointsteamlakers">+3 points</string>
    <string name="twopointsteamlakers">+2 points</string>
    <string name="freethrowteamlakers">free throw</string>
    <string name="fouls">Fouls</string>
    <string name="reset">reset</string>
</resources>
